--- a/TODO
+++ b/TODO
@@ -144,6 +144,7 @@
 - command-prompt doesn't work if made read-only. why?
 - option to quote format eg #{session_name:quoted}
 - formats need to be used for much much more stuff!
+- formats need conditions for >0 (for #P)
 - flags to find-window to select what is searched (title, name, content, history)
 * We need a tmux terminfo entry to document the extensions we are using in
   upstream terminfo. Must NOT change (only add or remove) anything from
