--- a/tmux.1
+++ b/tmux.1
@@ -14,7 +14,7 @@
 .\" IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING
 .\" OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: September 23 2011 $
+.Dd $Mdocdate: September 28 2011 $
 .Dt TMUX 1
 .Os
 .Sh NAME
@@ -690,11 +690,17 @@ or
 are invalid if
 .Fl t
 is used.
-.It Ic refresh-client Op Fl t Ar target-client
+.It Xo Ic refresh-client
+.Op Fl S
+.Op Fl t Ar target-client
+.Xc
 .D1 (alias: Ic refresh )
 Refresh the current client if bound to a key, or a single client if one is given
 with
 .Fl t .
+If
+.Fl S
+is specified, only update the client's status bar.
 .It Xo Ic rename-session
 .Op Fl t Ar target-session
 .Ar new-name
