--- a/TODO
+++ b/TODO
@@ -139,6 +139,7 @@
 - flags to find-window to select what is searched (title, name, content, history)
 - fetch full command line on !Linux, and add option to strip prefixes
   such as "sh " "/bin/sh " etc etc
+- synchronize-windows option
 * We need a tmux terminfo entry to document the extensions we are using in
   upstream terminfo. Must NOT change (only add or remove) anything from
   TERM=screen so we can fallback!
