minor formatting fix;

--- a/tmux.1
+++ b/tmux.1
@@ -615,7 +615,8 @@ List all clients attached to the server.
 For the meaning of the
 .Fl F
 flag, see the
-.Sx FORMATS section.
+.Sx FORMATS
+section.
 If
 .Ar target-session
 is specified, list only clients connected to that session.
