--- a/tmux.1
+++ b/tmux.1
@@ -14,7 +14,7 @@
 .\" IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING
 .\" OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: October 23 2011 $
+.Dd $Mdocdate: October 27 2011 $
 .Dt TMUX 1
 .Os
 .Sh NAME
@@ -2975,13 +2975,15 @@ Miscellaneous commands are as follows:
 .Bl -tag -width Ds
 .It Ic clock-mode Op Fl t Ar target-pane
 Display a large clock.
-.It Ic if-shell Ar shell-command command
+.It Ic if-shell Ar shell-command command Op Ar command
 .D1 (alias: Ic if )
-Execute
+Execute the first
 .Ar command
 if
 .Ar shell-command
-returns success.
+returns success or the second
+.Ar command
+otherwise.
 .It Ic lock-server
 .D1 (alias: Ic lock )
 Lock each client individually by running the command specified by the
