--- a/TODO
+++ b/TODO
@@ -140,6 +140,7 @@
 - fetch full command line on !Linux, and add option to strip prefixes
   such as "sh " "/bin/sh " etc etc
 - synchronize-windows option
+- possibly support rxvt-unicode extended mouse input (1015)
 * We need a tmux terminfo entry to document the extensions we are using in
   upstream terminfo. Must NOT change (only add or remove) anything from
   TERM=screen so we can fallback!
