formatting errors, found using freebsd's "igor";

--- a/tmux.1
+++ b/tmux.1
@@ -589,7 +589,7 @@ session.
 .D1 (alias: Ic detach )
 Detach the current client if bound to a key, the client specified with
 .Fl t ,
-or all clients currently attached to to the session specified by
+or all clients currently attached to the session specified by
 .Fl s .
 If
 .Fl P
