Sync OpenBSD patchset 989:
formatting errors, found using freebsd's "igor";

--- a/tmux.1
+++ b/tmux.1
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $OpenBSD: tmux.1,v 1.258 2011/12/24 08:46:48 jmc Exp $
 .\"
 .\" Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
 .\"
@@ -593,7 +593,7 @@ session.
 .D1 (alias: Ic detach )
 Detach the current client if bound to a key, the client specified with
 .Fl t ,
-or all clients currently attached to to the session specified by
+or all clients currently attached to the session specified by
 .Fl s .
 If
 .Fl P
