Sync OpenBSD patchset 995:
Show how to set default-path to revert to tmux's old behaviour of opening
new windows in the current working directory at the time tmux was started,
it's not obvious. naddy@ agrees this is a useful inclusion.

--- a/tmux.1
+++ b/tmux.1
@@ -1854,6 +1854,11 @@ If
 is "$HOME" or "~", the value of the
 .Ev HOME
 environment variable is used.
+If
+.Ar path
+is ".", the working directory when
+.Nm
+was started is used.
 .It Ic default-shell Ar path
 Specify the default shell.
 This is used as the login shell for new windows when the
