--- a/tmux.1
+++ b/tmux.1
@@ -1976,6 +1976,10 @@ is one of:
 .Ic magenta ,
 .Ic cyan ,
 .Ic white ,
+aixterm bright variants (if supported:
+.Ic brightred ,
+.Ic brightgreen ,
+and so on),
 .Ic colour0
 to
 .Ic colour255
