Sync OpenBSD patchset 1006:
Add strings to allow the aixterm bright colours to be used when
configuring colours, requested by Elliott Cable a few months ago.

--- a/tmux.1
+++ b/tmux.1
@@ -1980,6 +1980,10 @@ is one of:
 .Ic magenta ,
 .Ic cyan ,
 .Ic white ,
+aixterm bright variants (if supported:
+.Ic brightred ,
+.Ic brightgreen ,
+and so on),
 .Ic colour0
 to
 .Ic colour255
