--- a/tmux.1
+++ b/tmux.1
@@ -2719,7 +2719,7 @@ It is the same mechanism used to set for example the
 window title in an
 .Xr X 7
 window manager.
-Windows themselves do not have titles - a window's title is the title of it's
+Windows themselves do not have titles - a window's title is the title of its
 active pane.
 .Nm
 itself may set the title of the terminal in which the client is running, see
