Sync OpenBSD patchset 1015:
Add an option to move the status line to the top of the screen,
requested by many.

--- a/tmux.1
+++ b/tmux.1
@@ -2203,6 +2203,10 @@ Set the maximum
 .Ar length
 of the left component of the status bar.
 The default is 10.
+.It Xo Ic status-position
+.Op Ic top | bottom
+.Xc
+Set the position of the status line.
 .It Ic status-right Ar string
 Display
 .Ar string
