Give each window a unique id, like panes but prefixed with @. Based on work from George Nachman.

--- a/tmux.1
+++ b/tmux.1
@@ -385,8 +385,9 @@ follows the same rules as for
 .Ar target-session ,
 and
 .Em window
-is looked for in order: as a window index, for example mysession:1; as an exact
-window name, such as mysession:mywindow; then as an
+is looked for in order: as a window index, for example mysession:1;
+as a window id, such as @1;
+as an exact window name, such as mysession:mywindow; then as an
 .Xr fnmatch 3
 pattern or the start of a window name, such as mysession:mywin* or
 mysession:mywin.
