id -> ID; ok nicm

--- a/tmux.1
+++ b/tmux.1
@@ -386,7 +386,7 @@ follows the same rules as for
 and
 .Em window
 is looked for in order: as a window index, for example mysession:1;
-as a window id, such as @1;
+as a window ID, such as @1;
 as an exact window name, such as mysession:mywindow; then as an
 .Xr fnmatch 3
 pattern or the start of a window name, such as mysession:mywin* or
@@ -2684,7 +2684,7 @@ The following variables are available, where appropriate:
 .It Li "pane_active" Ta "1 if active pane"
 .It Li "pane_dead" Ta "1 if pane is dead"
 .It Li "pane_height" Ta "Height of pane"
-.It Li "pane_id" Ta "Unique pane id"
+.It Li "pane_id" Ta "Unique pane ID"
 .It Li "pane_pid" Ta "PID of first process in pane"
 .It Li "pane_start_command" Ta "Command pane started with"
 .It Li "pane_start_path" Ta "Path pane started with"
