Document option values, particularly that omitting on|off for a flag is a toggle.

--- a/tmux.1
+++ b/tmux.1
@@ -1783,6 +1783,10 @@ It is not possible to unset a global option.
 Available window options are listed under
 .Ic set-window-option .
 .Pp
+.Ar value
+depends on the option and may be a number, a string, or a flag (on, off, or
+omitted to toggle).
+.Pp
 Available server options are:
 .Bl -tag -width Ds
 .It Ic buffer-limit Ar number
