Sync OpenBSD patchset 1031:
Use format for display-message, based on a diff from George Nachman.

--- a/tmux.1
+++ b/tmux.1
@@ -2994,9 +2994,9 @@ is given, the output is printed to stdout, otherwise it is displayed in the
 status line.
 The format of
 .Ar message
-is as for
-.Ic status-left ,
-with the exception that #() are not handled; information is taken from
+is described in the
+.Sx FORMATS
+section; information is taken from
 .Ar target-pane
 if
 .Fl t
