--- a/tmux.1
+++ b/tmux.1
@@ -2626,9 +2626,10 @@ The default is off.
 .It Xo Ic show-options
 .Op Fl gsw
 .Op Fl t Ar target-session | Ar target-window
+.Op Ar option
 .Xc
 .D1 (alias: Ic show )
-Show the window options with
+Show the window options (or a single window option if given) with
 .Fl w
 (equivalent to
 .Ic show-window-options ) ,
@@ -2642,9 +2643,10 @@ is used.
 .It Xo Ic show-window-options
 .Op Fl g
 .Op Fl t Ar target-window
+.Op Ar option
 .Xc
 .D1 (alias: Ic showw )
-List the window options for
+List the window options or a single option for
 .Ar target-window ,
 or the global window options if
 .Fl g
