--- a/tmux.1
+++ b/tmux.1
@@ -1109,7 +1109,7 @@ choice list is shown.
 This command only works from inside
 .Nm .
 .It Xo Ic join-pane
-.Op Fl dhv
+.Op Fl bdhv
 .Oo Fl l
 .Ar size |
 .Fl p Ar percentage Oc
@@ -1126,6 +1126,12 @@ and creating a new pane, split it and move
 into the space.
 This can be used to reverse
 .Ic break-pane .
+The
+.Fl b
+option causes
+.Ar src-pane
+to be joined to left of or above
+.Ar dst-pane .
 .It Xo Ic kill-pane
 .Op Fl a
 .Op Fl t Ar target-pane
@@ -1214,6 +1220,22 @@ For the meaning of the
 flag, see the
 .Sx FORMATS
 section.
+.It Xo Ic move-pane
+.Op Fl bdhv
+.Oo Fl l
+.Ar size |
+.Fl p Ar percentage Oc
+.Op Fl s Ar src-pane
+.Op Fl t Ar dst-pane
+.Xc
+.D1 (alias: Ic movep )
+Like
+.Ic join-pane ,
+but
+.Ar src-pane
+and
+.Ar dst-pane
+may belong to the same window.
 .It Xo Ic move-window
 .Op Fl dk
 .Op Fl s Ar src-window
