--- a/tmux.1
+++ b/tmux.1
@@ -3084,7 +3084,7 @@ List the global buffers.
 Load the contents of the specified paste buffer from
 .Ar path .
 .It Xo Ic paste-buffer
-.Op Fl dr
+.Op Fl dpr
 .Op Fl b Ar buffer-index
 .Op Fl s Ar separator
 .Op Fl t Ar target-pane
@@ -3103,6 +3103,10 @@ flag.
 The
 .Fl r
 flag means to do no replacement (equivalent to a separator of LF).
+If
+.Fl p
+is specified, paste bracket control codes are inserted around the
+buffer if the application has requested bracketed paste mode.
 .It Xo Ic save-buffer
 .Op Fl a
 .Op Fl b Ar buffer-index
