Sync OpenBSD patchset 1041:
Add -F format to new-window and split-window to use with the -P flag,
from George Nachman.

--- a/tmux.1
+++ b/tmux.1
@@ -1253,6 +1253,7 @@ is moved to
 .Op Fl c Ar start-directory
 .Op Fl n Ar window-name
 .Op Fl t Ar target-window
+.Op Fl F Ar format
 .Op Ar shell-command
 .Xc
 .D1 (alias: Ic neww )
@@ -1310,7 +1311,11 @@ start-up files.
 .Pp
 The
 .Fl P
-option prints the location of the new window after it has been created.
+option prints information about the new window after it has been created.
+By default, it uses the format
+.Ql #{session_name}:#{window_index}
+but a different format may be specified with
+.Fl F .
 .It Ic next-layout Op Fl t Ar target-window
 .D1 (alias: Ic nextl )
 Move a window to the next layout and rearrange the panes to fit.
@@ -1495,6 +1500,7 @@ commands.
 .Fl p Ar percentage Oc
 .Op Fl t Ar target-pane
 .Op Ar shell-command
+.Op Fl F Ar format
 .Xc
 .D1 (alias: Ic splitw )
 Create a new pane by splitting
