--- a/TODO
+++ b/TODO
@@ -141,6 +141,8 @@
 - append to buffer in copy mode
 - way to paste w/o trailing whitespace
 - flag to switch-client to switch all clients
+- history of layouts and undo/redo flags to selectl
+- way to tag a layout as a number/name
 * We need a tmux terminfo entry to document the extensions we are using in
   upstream terminfo. Must NOT change (only add or remove) anything from
   TERM=screen so we can fallback!
